# LightBulbChallenge

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ColorAnalyser/: main.cpp
ColorUtils/: ColorUtils.cpp  ColorUtils.h
Data/a/: intensities.csv
Data/b/: intensities.csv  wavelengths.csv
Data/c/: intensities.csv
Draft/: Draft.py  Draft.pyproj  lightbulb.py
Viewer/: CIEWidget.cpp  CIEWidget.h  CMakeLists.txt  ColorEvolutionWidget.cpp  ColorEvolutionWidget.h  ColorStatisticsWidget.cpp  ColorStatisticsWidget.h  README.md  Resources.aps  Resources.rc  ViewerIcon.psd  main.cpp
